Alignment issue is solved in question list for question-status

--- a/src/app/components/question-list/question-list.component.scss
+++ b/src/app/components/question-list/question-list.component.scss
@@ -32,9 +32,6 @@
     .votes, .status, .views {
         padding: 6px;
         min-width: 55px;
-    }
-
-    .status {
         border: 1px solid transparent;
         border-radius: 3px;
     }
